--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "#### what your app does and how to use it (with screenshots)",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
